--- a/papers.html
+++ b/papers.html
@@ -163,13 +163,12 @@
     <li class="paperitem">
       <div class="paper-title"><i>What is a double star-product?</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">(2025) · arXiv:2506.00699</div>
+      <div class="paper-venue">(2025)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-1">Abstract</button>
         <a class="pill" href="https://arxiv.org/abs/2506.00699" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2506.00699.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
-        <a class="pill disabled" href="#" aria-disabled="true">Journal</a>
       </div>
 
       <div id="abs-1" class="abstract is-hidden">
@@ -181,7 +180,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Double Poisson brackets and involutive representation spaces</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) · arXiv:2310.01086</div>
+      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
@@ -199,7 +198,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Remarks on Yangian-Type Algebras and Double Poisson Brackets</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) · arXiv:2308.13325</div>
+      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-3">Abstract</button>
@@ -216,7 +215,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the direct product of graded graphs</i></div>
       <div class="paper-authors">P. Nikitin, N. Safonkin</div>
-      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) · arXiv:2209.05901</div>
+      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-4">Abstract</button>
@@ -233,7 +232,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the zigzag graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) · arXiv:2110.01508</div>
+      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-5">Abstract</button>
@@ -250,7 +249,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on Branching Graphs</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) · arXiv:2108.07850</div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-6">Abstract</button>
@@ -260,14 +259,14 @@
       </div>
 
       <div id="abs-6" class="abstract is-hidden">
-        <p>We study semifinite harmonic functions on arbitrary branching graphs. We give a detailed exposition of an algebraic method which allows one to classify semifinite indecomposable harmonic functions on some multiplicative branching graphs. This method was proposed by A. Wassermann in terms of operator algebras, while we rephrase, clarify, and simplify the main arguments, working only with combinatorial objects. This work was inspired by the theory of traceable factor representations of the infinite symmetric group \( S(\infty) \).</p>
+        <p>We study semifinite harmonic functions on arbitrary branching graphs. We give a detailed exposition of an algebraic method which allows one to classify semifinite indecomposable semifinite harmonic function out of every point of this set. We also establish a semifinite analog of the Vershik–Kerov ring theorem.</p>
       </div>
     </li>
 
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on the Gnedin–Kingman Graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) · arXiv:2103.02257</div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021)</div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-7">Abstract</button>
