--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       font-size: 1.08rem;
       line-height: 1.4;
       margin: 0;
+      color: var(--muted);
     }
 
     /* Desktop: Contact | About | Photo */
     .home-grid{
       margin-top: 16px;
       display: grid;
-      grid-template-columns: 0.95fr 1.6fr 1fr;
+      grid-template-columns: 0.95fr 1.6fr 1fr; /* contact narrow, about wide, photo normal */
       gap: 16px;
       align-items: start;
       grid-template-areas: "contact about photo";
@@ -36,14 +37,12 @@
     .about-card{ grid-area: about; }
     .photo{ grid-area: photo; }
 
-    /* Optional: make the photo feel like it belongs with the cards */
     .photo{
       border-radius: 16px;
       border: 1px solid var(--border);
       background: var(--card);
       padding: 10px;
     }
-
     .photo img{
       display: block;
       width: 100%;
@@ -85,7 +84,7 @@
 
     <!-- Contact (leftmost on desktop) -->
     <div class="card contact-card">
-      <h2>Contact</h2>
+      <h2 style="margin:0 0 10px;">Contact</h2>
       <div class="contact-grid">
 
         <div class="row">
@@ -111,15 +110,18 @@
 
     <!-- About (center, dominant) -->
     <div class="card about-card">
-      <h2>About</h2>
+      <h2 style="margin:0 0 10px;">About</h2>
+
       <p style="margin:0 0 10px;">
         I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
         I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
       </p>
+
       <p style="margin:0 0 10px;">
         I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
         with connections to noncommutative Poisson geometry and deformation quantization.
       </p>
+
       <p style="margin:0;">
         My CV is available here:
         <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>.
