--- a/papers.html
+++ b/papers.html
@@ -5,78 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Papers · Nikita Safonkin</title>
 
+  <link rel="stylesheet" href="assets/style.css">
+
   <style>
-    :root{
-      /* Put your accent color here */
-      --accent: #1155cc;
-
-      --bg: #fbfcfd;
-      --card: #ffffff;
-      --text: #111;
-      --muted: #555;
-      --border: rgba(0,0,0,.12);
-    }
-
-    *{ box-sizing: border-box; }
-    body{
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-    }
-
-    .topbar{
-      position: sticky;
-      top: 0;
-      background: rgba(255,255,255,.9);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border);
-    }
-    .nav{
-      max-width: 950px;
-      margin: 0 auto;
-      padding: 12px 18px;
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      align-items: center;
-    }
-    .brand{
-      font-weight: 750;
-      text-decoration: none;
-      color: var(--text);
-      margin-right: 10px;
-    }
-    .nav a{
-      text-decoration: none;
-      color: var(--muted);
-      padding: 6px 10px;
-      border-radius: 10px;
-    }
-    .nav a.active{
-      color: var(--accent);
-      border: 1px solid color-mix(in srgb, var(--accent) 35%, transparent);
-      background: color-mix(in srgb, var(--accent) 10%, white);
-    }
-
-    .wrap{
-      max-width: 950px;
-      margin: 0 auto;
-      padding: 26px 18px 60px;
-    }
-
-    .hero{
-      padding: 18px;
-      border-radius: 18px;
-      border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
-      background: linear-gradient(135deg,
-        color-mix(in srgb, var(--accent) 12%, white),
-        white);
-    }
-    h1{ margin: 0 0 6px; font-size: 1.9rem; }
-    .sub{ color: var(--muted); }
-
-    /* Yuan-style: each paper in its own frame */
+    /* Papers-only styles */
     ol.papers{
       list-style: none;
       padding-left: 0;
@@ -155,7 +87,7 @@
 
 <main class="wrap">
   <section class="hero">
-    <h1>Publications & Preprints</h1>
+    <h1 style="margin:0;">Publications &amp; Preprints</h1>
   </section>
 
   <ol class="papers" reversed>
@@ -287,7 +219,6 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-8">Abstract</button>
-        <!-- arXiv button removed (as requested) -->
         <a class="pill disabled" href="#" aria-disabled="true">PDF</a>
         <a class="pill" href="https://link.springer.com/article/10.3103/S1066369X18110014" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
