--- a/other_writings.html
+++ b/other_writings.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Other Writings · Nikita Safonkin</title>
+
   <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
+
 <header class="topbar">
   <nav class="nav">
     <a class="brand" href="index.html">Nikita Safonkin</a>
@@ -19,19 +21,15 @@
 
 <main class="wrap">
   <section class="hero">
-    <h1>Other Writings</h1>
-    <p class="sub">Notes, expository texts, software, teaching materials, etc.</p>
+    <h1 style="margin:0;">Other Writings</h1>
   </section>
 
-  <div class="card">
-    <ul class="simple-list">
-      <li><strong>Notes:</strong> <a href="#">(add link)</a></li>
-      <li><strong>Expository:</strong> <a href="#">(add link)</a></li>
-      <li><strong>Software / code:</strong> <a href="#">(add link)</a></li>
-      <li><strong>Teaching materials:</strong> <a href="#">(add link)</a></li>
-    </ul>
+  <div class="card" style="margin-top:16px;">
+    <p style="margin:0;">
+      Notes, expository texts, slides, etc. (coming soon).
+    </p>
   </div>
 </main>
+
 </body>
 </html>
-
