--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .home-grid{
       margin-top: 16px;
       display: grid;
-      grid-template-columns: 0.95fr 1.6fr 1fr; /* contact narrow, about wide, photo normal */
+      grid-template-columns: 0.75fr 1.8fr 1fr; /* contact narrower, about wider, photo normal */
       gap: 16px;
       align-items: start;
       grid-template-areas: "contact about photo";
@@ -94,12 +94,13 @@
 
         <div class="row">
           <div class="label">Office</div>
-          <div class="value">Neues Augusteum, room A409</div>
+          <div class="value">A409</div>
         </div>
 
         <div class="row">
           <div class="label">Address</div>
           <div class="value">
+            Neues Augusteum<br>
             Augustusplatz 10<br>
             04109 Leipzig
           </div>
