--- a/papers.html
+++ b/papers.html
@@ -99,8 +99,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-1">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2506.00699" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2506.00699.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2506.00699" target="_blank" rel="noopener noreferrer">arXiv</a>
       </div>
 
       <div id="abs-1" class="abstract is-hidden">
@@ -116,14 +116,14 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2310.01086" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2310.01086.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2310.01086" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://link.springer.com/article/10.1007/s11005-024-01782-3" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
       <div id="abs-2" class="abstract is-hidden">
-        <p>Let \( \Bbbk \) be an algebraically closed field of characteristic \( 0 \) and \( A \) be a finitely generated associative \( \Bbbk \)-algebra, in general noncommutative. One assigns to \( A \) a sequence of commutative \( \Bbbk \)-algebras \( \mathcal{O}(A,d) \), \( d = 1, 2, 3, \dots \), where \( \mathcal{O}(A,d) \) is the coordinate ring of the space \( \operatorname{Rep}(A,d) \) of \( d \)-dimensional representations of the algebra \( A \). A <em>double Poisson bracket</em> on \( A \) in the sense of Van den Bergh is a bilinear map \( \{\!\!\{-,-\}\!\!\} \colon A \times A \to A \otimes A \), subject to certain conditions. Van den Bergh showed that any such bracket \( \{\!\!\{-,-\}\!\!\} \) induces Poisson structures on all algebras \( \mathcal{O}(A,d) \).</p>
-        <p>We propose an analog of Van den Bergh's construction, which produces Poisson structures on the coordinate rings of certain subspaces of the representation spaces \( \operatorname{Rep}(A,d) \). We call these subspaces the <em>involutive</em> representation spaces. They arise by imposing an additional symmetry condition on \( \operatorname{Rep}(A,d) \) — just as the classical groups from the series B, C, D are obtained from the general linear groups (series A) as fixed point sets of involutive automorphisms.</p>
+        <p>Let \( \Bbbk \) be an algebraically closed field of characteristic \( 0 \) and \( A \) be a finitely generated associative \( \Bbbk \)-algebra, in general noncommutative. One assigns to \( A \) a sequence of commutative \( \Bbbk \)-algebras \( \mathcal{O}(A,d) \), \( d = 1, 2, 3, \dots \), where \( \mathcal{O}(A,d) \) is the coordinate ring of the space of \( d \)-dimensional representations of the algebra \( A \). A <em>double Poisson bracket</em> on \( A \) in the sense of Van den Bergh is a bilinear map \( \{\!\!\{-,-\}\!\!\} \colon A \times A \to A \otimes A \), subject to certain conditions. Van den Bergh showed that any such bracket \( \{\!\!\{-,-\}\!\!\} \) induces Poisson structures on all algebras \( \mathcal{O}(A,d) \).</p>
+        <p>We propose an analog of Van den Bergh's construction, which produces Poisson structures on the coordinate rings of certain subspaces of the representation spaces. We call these subspaces the <em>involutive</em> representation spaces. They arise by imposing an additional symmetry condition — just as the classical groups from the series B, C, D are obtained from the general linear groups (series A) as fixed point sets of involutive automorphisms.</p>
       </div>
     </li>
 
@@ -134,8 +134,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-3">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2308.13325" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2308.13325.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2308.13325" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://link.springer.com/article/10.1134/S0016266323040068" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
@@ -151,8 +151,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-4">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2209.05901" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2209.05901.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2209.05901" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=znsl&paperid=7284&option_lang=eng" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
@@ -168,8 +168,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-5">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2110.01508" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2110.01508.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2110.01508" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://link.springer.com/article/10.1134/S0016266322030042" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
@@ -185,8 +185,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-6">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2108.07850" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2108.07850.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2108.07850" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://link.springer.com/article/10.1007/s10958-022-05779-y" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
@@ -202,8 +202,8 @@
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-7">Abstract</button>
-        <a class="pill" href="https://arxiv.org/abs/2103.02257" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://arxiv.org/pdf/2103.02257.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="pill" href="https://arxiv.org/abs/2103.02257" target="_blank" rel="noopener noreferrer">arXiv</a>
         <a class="pill" href="https://link.springer.com/article/10.1007/s10958-021-05356-9" target="_blank" rel="noopener noreferrer">Journal</a>
       </div>
 
@@ -223,7 +223,7 @@
       </div>
 
       <div id="abs-8" class="abstract is-hidden">
-        <p>We study problem of global classification of ordinary differential equations with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
+        <p>We study problem of global classification of ordinary differential equations of the first order with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
       </div>
     </li>
 
