--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .home-grid{
       margin-top: 16px;
       display: grid;
-      grid-template-columns: 0.75fr 1.8fr 1fr; /* contact narrower, about wider, photo normal */
+      grid-template-columns: 0.62fr 1.93fr 1fr; /* contact narrower, about wider, photo normal */
       gap: 16px;
       align-items: start;
       grid-template-areas: "contact about photo";
@@ -48,6 +48,18 @@
       width: 100%;
       height: auto;
       border-radius: 12px;
+    }
+
+    /* Contact: put value UNDER the label (always, not only on mobile) */
+    .contact-card .row{
+      grid-template-columns: 1fr;
+      gap: 4px;
+    }
+    .contact-card .label{
+      margin: 0;
+    }
+    .contact-card .value{
+      margin: 0;
     }
 
     /* Mobile: Photo -> About -> Contact */
