--- a/index.html
+++ b/index.html
@@ -50,16 +50,10 @@
       border-radius: 12px;
     }
 
-    /* Contact: put value UNDER the label (always, not only on mobile) */
+    /* Contact: put value UNDER the label (always) */
     .contact-card .row{
       grid-template-columns: 1fr;
       gap: 4px;
-    }
-    .contact-card .label{
-      margin: 0;
-    }
-    .contact-card .value{
-      margin: 0;
     }
 
     /* Mobile: Photo -> About -> Contact */
@@ -105,17 +99,16 @@
         </div>
 
         <div class="row">
-          <div class="label">Office</div>
-          <div class="value">A409</div>
-        </div>
-
-        <div class="row">
           <div class="label">Address</div>
           <div class="value">
-            Neues Augusteum<br>
             Augustusplatz 10<br>
             04109 Leipzig
           </div>
+        </div>
+
+        <div class="row">
+          <div class="label">Office</div>
+          <div class="value">A409 (Neues Augusteum)</div>
         </div>
 
       </div>
