--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .home-grid{
       margin-top: 16px;
       display: grid;
-      grid-template-columns: 0.62fr 1.93fr 1fr; /* contact narrower, about wider, photo normal */
+      grid-template-columns: 0.62fr 1.93fr 1.25fr; /* photo +25% */
       gap: 16px;
       align-items: start;
       grid-template-areas: "contact about photo";
