--- a/index.html
+++ b/index.html
@@ -1,154 +1,63 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Nikita Safonkin</title>
-  <link rel="stylesheet" href="assets/style.css">
+---
+layout: default
+title: Nikita Safonkin
+extra_css:
+  - /assets/index.css
+---
 
-  <style>
-    /* Make ONLY the home hero bigger (no vertical shift) */
-    .hero-home{
-      padding: 28px 24px;
-    }
-    .hero-home h1{
-      font-size: 2.25rem;
-      line-height: 1.12;
-      margin: 0 0 10px;
-    }
-    .hero-home .sub{
-      font-size: 1.08rem;
-      line-height: 1.4;
-      margin: 0;
-      color: var(--muted);
-    }
+<section class="hero hero-home">
+  <h1>Nikita Safonkin</h1>
+  <p class="sub">Postdoctoral researcher at Leipzig University</p>
+</section>
 
-    /* Desktop: Contact | About | Photo */
-    .home-grid{
-      margin-top: 16px;
-      display: grid;
-      grid-template-columns: 0.62fr 1.93fr 1.25fr; /* photo +25% */
-      gap: 16px;
-      align-items: start;
-      grid-template-areas: "contact about photo";
-    }
+<section class="home-grid">
 
-    .contact-card{ grid-area: contact; }
-    .about-card{ grid-area: about; }
-    .photo{ grid-area: photo; }
+  <div class="card contact-card">
+    <h2 style="margin:0 0 10px;">Contact</h2>
+    <div class="contact-grid">
 
-    .photo{
-      border-radius: 16px;
-      border: 1px solid var(--border);
-      background: var(--card);
-      padding: 10px;
-    }
-    .photo img{
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-    }
-
-    /* Contact: put value UNDER the label (always) */
-    .contact-card .row{
-      grid-template-columns: 1fr;
-      gap: 4px;
-    }
-
-    /* About: increase paragraph spacing */
-    .about-card p{
-      margin: 0 0 16px;
-    }
-    .about-card p:last-child{
-      margin-bottom: 0;
-    }
-
-    /* Mobile: Photo -> About -> Contact */
-    @media (max-width: 900px){
-      .home-grid{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-          "photo"
-          "about"
-          "contact";
-      }
-    }
-  </style>
-</head>
-
-<body>
-<header class="topbar">
-  <nav class="nav">
-    <a class="brand" href="index.html">Nikita Safonkin</a>
-    <a class="active" href="index.html">Bio</a>
-    <a href="papers.html">Papers</a>
-    <a href="other_writings.html">Other Writings</a>
-  </nav>
-</header>
-
-<main class="wrap">
-
-  <section class="hero hero-home">
-    <h1>Nikita Safonkin</h1>
-    <p class="sub">Postdoctoral researcher at Leipzig University</p>
-  </section>
-
-  <section class="home-grid">
-
-    <!-- Contact (leftmost on desktop) -->
-    <div class="card contact-card">
-      <h2 style="margin:0 0 10px;">Contact</h2>
-      <div class="contact-grid">
-
-        <div class="row">
-          <div class="label">Email</div>
-          <div class="value">safonkin.nik@gmail.com</div>
-        </div>
-
-        <div class="row">
-          <div class="label">Address</div>
-          <div class="value">
-            Augustusplatz 10<br>
-            04109 Leipzig
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="label">Office</div>
-          <div class="value">A409 (Neues Augusteum)</div>
-        </div>
-
+      <div class="row">
+        <div class="label">Email</div>
+        <div class="value">safonkin.nik@gmail.com</div>
       </div>
+
+      <div class="row">
+        <div class="label">Address</div>
+        <div class="value">
+          Augustusplatz 10<br>
+          04109 Leipzig
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="label">Office</div>
+        <div class="value">A409 (Neues Augusteum)</div>
+      </div>
+
     </div>
+  </div>
 
-    <!-- About (center, dominant) -->
-    <div class="card about-card">
-      <h2 style="margin:0 0 10px;">About</h2>
+  <div class="card about-card">
+    <h2 style="margin:0 0 10px;">About</h2>
 
-      <p>
-        I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
-        I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
-      </p>
+    <p>
+      I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
+      I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
+    </p>
 
-      <p>
-        I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
-        with connections to noncommutative Poisson geometry and deformation quantization.
-      </p>
+    <p>
+      I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
+      with connections to noncommutative Poisson geometry and deformation quantization.
+    </p>
 
-      <p>
-        My CV is available here:
-        <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>.
-      </p>
-    </div>
+    <p>
+      My CV is available here:
+      <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>.
+    </p>
+  </div>
 
-    <!-- Photo (right) -->
-    <div class="photo">
-      <img src="assets/me.jpg" alt="Photo of Nikita Safonkin">
-    </div>
+  <div class="photo">
+    <img src="{{ '/assets/me.jpg' | relative_url }}" alt="Photo of Nikita Safonkin">
+  </div>
 
-  </section>
-
-</main>
-</body>
-</html>
+</section>
