--- a/other_writings.html
+++ b/other_writings.html
@@ -1,35 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Other Writings · Nikita Safonkin</title>
+---
+layout: default
+title: Other Writings · Nikita Safonkin
+---
 
-  <link rel="stylesheet" href="assets/style.css">
-</head>
+<section class="hero">
+  <h1 style="margin:0;">Other Writings</h1>
+</section>
 
-<body>
-
-<header class="topbar">
-  <nav class="nav">
-    <a class="brand" href="index.html">Nikita Safonkin</a>
-    <a href="index.html">Bio</a>
-    <a href="papers.html">Papers</a>
-    <a class="active" href="other_writings.html">Other Writings</a>
-  </nav>
-</header>
-
-<main class="wrap">
-  <section class="hero">
-    <h1 style="margin:0;">Other Writings</h1>
-  </section>
-
-  <div class="card" style="margin-top:16px;">
-    <p style="margin:0;">
-      Notes, expository texts, slides, etc. (coming soon).
-    </p>
-  </div>
-</main>
-
-</body>
-</html>
+<div class="card" style="margin-top:16px;">
+  <p style="margin:0;">
+    Notes, expository texts, slides, etc. (coming soon).
+  </p>
+</div>
