--- a/papers.html
+++ b/papers.html
@@ -131,4 +131,23 @@ extra_js:
     </div>
 
     <div id="abs-7" class="abstract is-hidden">
-      <p>We study the Gnedin–Kingman graph, which corresponds to
+      <p>We study the Gnedin–Kingman graph, which corresponds to Pieri's rule for the monomial basis \( \{M_{\lambda}\} \) in the algebra \( \mathrm{QSym} \) of quasisymmetric functions. The paper contains a detailed announcement of results concerning the classification of indecomposable semifinite harmonic functions on the Gnedin–Kingman graph. For these functions, we also establish a multiplicativity property, which is an analog of the Vershik–Kerov ring theorem.</p>
+    </div>
+  </li>
+
+  <li class="paperitem">
+    <div class="paper-title"><i>Classification of Certain Class of Ordinary Differential Equations of the First Order</i></div>
+    <div class="paper-authors">P. Bibikov, N. Safonkin</div>
+    <div class="paper-venue">Russian Mathematics 62 (2018)</div>
+
+    <div class="paper-links">
+      <button class="pill" type="button" data-toggle="abs-8">Abstract</button>
+      <a class="pill" href="https://link.springer.com/article/10.3103/S1066369X18110014" target="_blank" rel="noopener noreferrer">Journal</a>
+    </div>
+
+    <div id="abs-8" class="abstract is-hidden">
+      <p>We study problem of global classification of ordinary differential equations of the first order with the linear-fractional right-hand side with rational coefficients with respect to a symmetry group. We find the field of differential invariants and obtain the equivalence criterion for two such equations.</p>
+    </div>
+  </li>
+
+</ol>
