--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ extra_css:
 
     <p>
       My CV is available here:
-      <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>.
+      <a href="{{ '/assets/CV.pdf' | relative_url }}" target="_blank" rel="noopener">CV</a>.
     </p>
   </div>
 
