--- a/other_writings.html
+++ b/other_writings.html
@@ -9,7 +9,15 @@ show_footer: false
 </section>
 
 <div class="card" style="margin-top:16px;">
-  <p style="margin:0;">
-    Notes, expository texts, slides, etc. (coming soon).
-  </p>
+  <ul style="margin:0; padding-left: 18px;">
+    <li style="margin-bottom: 12px;">
+      My PhD thesis <i>“Harmonic functions on branching graphs”</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
+      <a href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+    </li>
+
+    <li style="margin-bottom: 0;">
+      My Master’s thesis <i>“Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
+      <a href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+    </li>
+  </ul>
 </div>
