--- a/other_writings.html
+++ b/other_writings.html
@@ -9,15 +9,21 @@ show_footer: false
 </section>
 
 <div class="card" style="margin-top:16px;">
-  <ul style="margin:0; padding-left: 18px;">
-    <li style="margin-bottom: 12px;">
-      My PhD thesis <i>“Harmonic functions on branching graphs”</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
-      <a href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
-    </li>
+  <p style="margin:0;">
+    Theses
+  </p>
+</div>
 
-    <li style="margin-bottom: 0;">
-      My Master’s thesis <i>“Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
-      <a href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
-    </li>
-  </ul>
+<div class="card" style="margin-top:16px;">
+  <p style="margin:0;">
+    PhD thesis <i>“Harmonic functions on branching graphs”</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
+    <a href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+  </p>
+</div>
+
+<div class="card" style="margin-top:16px;">
+  <p style="margin:0;">
+    Master’s thesis <i>“Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
+    <a href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+  </p>
 </div>
