--- a/index.html
+++ b/index.html
@@ -41,20 +41,22 @@ extra_css:
   <div class="card about-card">
     <h2 style="margin:0 0 10px;">About</h2>
 
-    <p>
-      I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
-      I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
-    </p>
+    <div class="about-body">
+      <p>
+        I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
+        I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
+      </p>
 
-    <p>
-      I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
-      with connections to noncommutative Poisson geometry and deformation quantization.
-    </p>
+      <p>
+        I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
+        with connections to noncommutative Poisson geometry and deformation quantization.
+      </p>
 
-    <p>
-      My CV is available here:
-      <a href="{{ '/assets/CV.pdf' | relative_url }}" target="_blank" rel="noopener">CV</a>.
-    </p>
+      <p>
+        My CV is available here:
+        <a href="{{ '/assets/CV.pdf' | relative_url }}" target="_blank" rel="noopener">CV</a>.
+      </p>
+    </div>
   </div>
 
   <div class="photo">
