--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ extra_css:
   </section>
 
   <div class="card photo-card">
-    <img src="{{ '/me.jpg' | relative_url }}" alt="Photo of Nikita Safonkin">
+    <img src="{{ '/assets/me.jpg' | relative_url }}" alt="Photo of Nikita Safonkin">
   </div>
 
   <div class="card contact-card">
