--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 ---
 layout: default
 title: Nikita Safonkin
+show_footer: true
+extra_css:
+  - /assets/index.css
 ---
 
-<section class="hero hero-home">
-  <h1>Nikita Safonkin</h1>
-  <p class="sub">Postdoctoral researcher at Leipzig University</p>
-</section>
+<section class="home-layout">
 
-<section class="home-grid">
+  <section class="hero hero-home">
+    <h1>Nikita Safonkin</h1>
+    <p class="sub">Postdoctoral researcher at Leipzig University</p>
+  </section>
 
-  <!-- Contact -->
+  <div class="card photo-card">
+    <img src="{{ '/assets/me.jpg' | relative_url }}" alt="Photo of Nikita Safonkin">
+  </div>
+
   <div class="card contact-card">
-    <h2>Contact</h2>
+    <h2 style="margin:0 0 10px;">Contact</h2>
 
-    <div class="contact-stack">
-      <div class="contact-item">
+    <div class="contact-grid">
+      <div class="row">
         <div class="label">Email</div>
         <div class="value">safonkin.nik@gmail.com</div>
       </div>
 
-      <div class="contact-item">
+      <div class="row">
         <div class="label">Address</div>
         <div class="value">
           Augustusplatz 10<br>
@@ -28,55 +34,32 @@ title: Nikita Safonkin
         </div>
       </div>
 
-      <div class="contact-item">
+      <div class="row">
         <div class="label">Office</div>
         <div class="value">A409 (Neues Augusteum)</div>
       </div>
     </div>
   </div>
 
-  <!-- About -->
   <div class="card about-card">
-    <h2>About</h2>
+    <h2 style="margin:0 0 10px;">About</h2>
 
-    <p>
-      I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
-      I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
-    </p>
+    <div class="about-body">
+      <p>
+        I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
+        I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
+      </p>
 
-    <p>
-      I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
-      with connections to noncommutative Poisson geometry and deformation quantization.
-    </p>
+      <p>
+        I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
+        with connections to noncommutative Poisson geometry and deformation quantization.
+      </p>
 
-    <p>
-      My CV is available here: <a href="{{ '/assets/CV.pdf' | relative_url }}">CV</a>.
-    </p>
-  </div>
-
-  <!-- Photo -->
-  <div class="photo photo-card">
-    <img src="me.jpg" alt="Photo of Nikita Safonkin">
+      <p>
+        My CV is available here:
+        <a href="{{ '/assets/CV.pdf' | relative_url }}" target="_blank" rel="noopener">CV</a>.
+      </p>
+    </div>
   </div>
 
 </section>
-
-<!-- Recent talks -->
-<section class="home-wide">
-  <div class="card">
-    <h2>Recent talks</h2>
-
-    <ul class="talks-list">
-      <li>2025-12-02 · BIMSA Integrable Systems Seminar · <a href="https://sites.google.com/view/bimsa-iss#h.ekxtfk9gbdy4" target="_blank" rel="noopener noreferrer">link</a></li>
-      <li>2025-10-01 · Deformation quantization and quantum groups seminar, Independent University of Moscow · <a href="https://mccme.ru/ru/nmu/courses-of-nmu/osen-20252026/nmu_autumn2025_deformacionnoe-kvantovanie/" target="_blank" rel="noopener noreferrer">link</a></li>
-      <li>2025-09-22–26 · X International Workshop on Non-Associative Algebras in Dijon · <a href="https://sites.google.com/view/nonassociativedijon2025/home" target="_blank" rel="noopener noreferrer">link</a></li>
-      <li>2025-06-20 · Séminaire Physique mathématique ICJ, Institut Camille Jordan · <a href="https://indico.math.cnrs.fr/event/13841/" target="_blank" rel="noopener noreferrer">link</a></li>
-      <li>2025-06-09 · European Non-Associative Algebra Seminar · <a href="https://sites.google.com/view/enaaw/past-talks/2025" target="_blank" rel="noopener noreferrer">link</a></li>
-    </ul>
-  </div>
-</section>
-
-<!-- Last updated (ONLY on the main page) -->
-<div class="last-updated">
-  Last updated: {{ site.time | date: "%Y-%m" }}
-</div>
