--- a/index.html
+++ b/index.html
@@ -68,38 +68,38 @@ extra_css:
   <h2 style="margin:0 0 10px;">Recent Talks</h2>
 
   <ul style="margin:0; padding-left:18px;">
-    <li>
-      BIMSA Integrable Systems Seminar (2025-12-02) ·
+    <li style="margin:0 0 10px;">
+      BIMSA Integrable Systems Seminar (December 2, 2025) ·
       <a href="https://sites.google.com/view/bimsa-iss#h.ekxtfk9gbdy4" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      Deformation Quantization and Quantum Groups Seminar, Independent University of Moscow (2025-10-01) ·
+    <li style="margin:0 0 10px;">
+      Deformation Quantization and Quantum Groups Seminar, Independent University of Moscow (October 1, 2025) ·
       <a href="https://mccme.ru/ru/nmu/courses-of-nmu/osen-20252026/nmu_autumn2025_deformacionnoe-kvantovanie/" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      X International Workshop on Non-Associative Algebras, Dijon (2025-09-22–2025-09-26) ·
+    <li style="margin:0 0 10px;">
+      X International Workshop on Non-Associative Algebras, Dijon (September 22–26, 2025) ·
       <a href="https://sites.google.com/view/nonassociativedijon2025/home" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      Séminaire Physique mathématique ICJ, Institut Camille Jordan (2025-06-20) ·
+    <li style="margin:0 0 10px;">
+      Séminaire Physique mathématique ICJ, Institut Camille Jordan, Lyon (June 20, 2025) ·
       <a href="https://indico.math.cnrs.fr/event/13841/" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      European Non-Associative Algebra Seminar (2025-06-09) ·
+    <li style="margin:0 0 10px;">
+      European Non-Associative Algebra Seminar (June 9, 2025) ·
       <a href="https://sites.google.com/view/enaaw/past-talks/2025" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      Geometry Seminar, Max Planck Institute for Mathematics in the Sciences, Leipzig (2024-12-03) ·
+    <li style="margin:0 0 10px;">
+      Geometry Seminar, Max Planck Institute for Mathematics in the Sciences, Leipzig (December 3, 2024) ·
       <a href="https://www.mis.mpg.de/events/event/double-poisson-brackets-and-involutive-representation-spaces" target="_blank" rel="noopener">link</a>
     </li>
 
-    <li>
-      VIII International Workshop on Non-Associative Algebras, Linköping (2024-10-21–2024-10-25) ·
+    <li style="margin:0;">
+      VIII International Workshop on Non-Associative Algebras, Linköping (October 21–25, 2024) ·
       <a href="https://sites.google.com/view/nonassociativelinkoping2024/home" target="_blank" rel="noopener">link</a>
     </li>
   </ul>
