--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Nikita Safonkin
 show_footer: true
 extra_css:
   - /assets/index.css
+  - /assets/spacing.css
 ---
 
 <section class="home-layout">
