--- a/papers.html
+++ b/papers.html
@@ -5,6 +5,7 @@ show_footer: false
 mathjax: true
 extra_css:
   - /assets/papers.css
+  - /assets/spacing.css
 extra_js:
   - /assets/papers.js
 ---
