--- a/other_writings.html
+++ b/other_writings.html
@@ -2,22 +2,13 @@
 layout: default
 title: Other Writings · Nikita Safonkin
 show_footer: false
+extra_css:
+  - /assets/other_writings.css
+  - /assets/spacing.css
 ---
 
-<section class="hero">
-  <h1 style="margin:0;">Other Writings</h1>
-</section>
+# Other Writings
 
-<div class="card" style="margin-top:16px;">
-  <p style="margin:0;">
-    PhD thesis <i>“Harmonic functions on branching graphs”</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
-    <a href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
-  </p>
-</div>
+PhD thesis “Harmonic functions on branching graphs”, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski. [PDF](/assets/other_writings/phd-thesis.pdf)
 
-<div class="card" style="margin-top:16px;">
-  <p style="margin:0;">
-    Master’s thesis <i>“Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
-    <a href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
-  </p>
-</div>
+Master’s thesis “Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”, Higher School of Economics & Skoltech, (2019), supervised by G. Olshanski. [PDF](/assets/other_writings/masters-thesis.pdf)
