--- a/other_writings.html
+++ b/other_writings.html
@@ -7,8 +7,32 @@ extra_css:
   - /assets/spacing.css
 ---
 
-# Other Writings
+<section class="hero">
+  <h1 style="margin:0;">Other Writings</h1>
+</section>
 
-PhD thesis “Harmonic functions on branching graphs”, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski. [PDF](/assets/other_writings/phd-thesis.pdf)
+<div class="writings-list" style="margin-top:16px; display:grid;">
+  <div class="card">
+    <div style="font-weight:750; margin-bottom:6px;">
+      PhD thesis <i>“Harmonic functions on branching graphs”</i>
+    </div>
+    <div style="color:var(--muted);">
+      University of Reims Champagne-Ardenne (2023). Supervised by G. Olshanski.
+    </div>
+    <div style="margin-top:10px;">
+      <a href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+    </div>
+  </div>
 
-Master’s thesis “Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”, Higher School of Economics & Skoltech, (2019), supervised by G. Olshanski. [PDF](/assets/other_writings/masters-thesis.pdf)
+  <div class="card">
+    <div style="font-weight:750; margin-bottom:6px;">
+      Master’s thesis <i>“Infinite-dimensional Representations of the Quantized Algebra U(gl_N)”</i>
+    </div>
+    <div style="color:var(--muted);">
+      Higher School of Economics &amp; Skoltech (2019). Supervised by G. Olshanski.
+    </div>
+    <div style="margin-top:10px;">
+      <a href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+    </div>
+  </div>
+</div>
