--- a/other.html
+++ b/other.html
@@ -7,15 +7,16 @@ extra_css:
   - /assets/other.css
 ---
 
-<section class="hero other-hero">
+<section class="hero">
   <h1 style="margin:0;">Other</h1>
 </section>
 
 <div class="writings-list other-list" style="margin-top:16px; display:grid;">
+
   <div class="card thesis-card">
     <div class="thesis-kind"><b>PhD thesis</b></div>
     <div class="thesis-meta">
-      Harmonic functions on branching graphs, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
+      <i>&ldquo;Harmonic functions on branching graphs&rdquo;</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
     </div>
     <div class="thesis-links">
       <a class="pill" href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
@@ -25,10 +26,11 @@ extra_css:
   <div class="card thesis-card">
     <div class="thesis-kind"><b>Master’s thesis</b></div>
     <div class="thesis-meta">
-      Infinite-dimensional Representations of the Quantized Algebra U(gl_N), Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
+      <i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
     </div>
     <div class="thesis-links">
       <a class="pill" href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
     </div>
   </div>
+
 </div>
