--- a/other.html
+++ b/other.html
@@ -4,33 +4,35 @@ title: Other · Nikita Safonkin
 show_footer: false
 extra_css:
   - /assets/spacing.css
-  - /assets/other.css
+  - /assets/papers.css
 ---
 
 <section class="hero">
   <h1 style="margin:0;">Other</h1>
 </section>
 
-<div class="writings-list other-list" style="margin-top:16px; display:grid;">
+<ol class="papers" style="margin-top:16px;">
 
-  <div class="card thesis-card">
-    <div class="thesis-kind"><b>PhD thesis</b></div>
-    <div class="thesis-meta">
+  <li class="paperitem">
+    <div class="paper-title"><b>PhD thesis</b></div>
+    <div class="paper-venue">
       <i>&ldquo;Harmonic functions on branching graphs&rdquo;</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
     </div>
-    <div class="thesis-links">
+
+    <div class="paper-links">
       <a class="pill" href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
     </div>
-  </div>
+  </li>
 
-  <div class="card thesis-card">
-    <div class="thesis-kind"><b>Master’s thesis</b></div>
-    <div class="thesis-meta">
+  <li class="paperitem">
+    <div class="paper-title"><b>Master&rsquo;s thesis</b></div>
+    <div class="paper-venue">
       <i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
     </div>
-    <div class="thesis-links">
+
+    <div class="paper-links">
       <a class="pill" href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
     </div>
-  </div>
+  </li>
 
-</div>
+</ol>
