--- a/other.html
+++ b/other.html
@@ -6,6 +6,13 @@ extra_css:
   - /assets/papers.css
 ---
 
+<style>
+  /* Force Other page container to match Papers container */
+  .wrap, .nav{
+    max-width: 880px !important;
+  }
+</style>
+
 <section class="hero">
   <h1 style="margin:0;">Other</h1>
 </section>
@@ -13,7 +20,7 @@ extra_css:
 <ol class="papers" style="margin-top:16px;">
 
   <li class="paperitem">
-    <div class="paper-title"><b>PhD thesis</b></div>
+    <div class="paper-title"><b>PhD Thesis</b></div>
     <div class="paper-venue">
       <i>&ldquo;Harmonic functions on branching graphs&rdquo;</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
     </div>
@@ -24,7 +31,7 @@ extra_css:
   </li>
 
   <li class="paperitem">
-    <div class="paper-title"><b>Master&rsquo;s thesis</b></div>
+    <div class="paper-title"><b>Master&rsquo;s Thesis</b></div>
     <div class="paper-venue">
       <i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
     </div>
