--- a/other.html
+++ b/other.html
@@ -4,40 +4,32 @@ title: Other · Nikita Safonkin
 show_footer: false
 extra_css:
   - /assets/papers.css
+  - /assets/spacing.css
 ---
-
-<style>
-  /* Force Other page container to match Papers container */
-  .wrap, .nav{
-    max-width: 880px !important;
-  }
-</style>
 
 <section class="hero">
   <h1 style="margin:0;">Other</h1>
 </section>
 
-<ol class="papers" style="margin-top:16px;">
+<ol class="papers">
 
   <li class="paperitem">
     <div class="paper-title"><b>PhD Thesis</b></div>
-    <div class="paper-venue">
-      <i>&ldquo;Harmonic functions on branching graphs&rdquo;</i>, University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
-    </div>
+    <div class="paper-authors"><i>&ldquo;Harmonic functions on branching graphs&rdquo;</i></div>
+    <div class="paper-venue">University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.</div>
 
     <div class="paper-links">
-      <a class="pill" href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+      <a class="pill" href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener noreferrer">PDF</a>
     </div>
   </li>
 
   <li class="paperitem">
     <div class="paper-title"><b>Master&rsquo;s Thesis</b></div>
-    <div class="paper-venue">
-      <i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i>, Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
-    </div>
+    <div class="paper-authors"><i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i></div>
+    <div class="paper-venue">Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.</div>
 
     <div class="paper-links">
-      <a class="pill" href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener">PDF</a>
+      <a class="pill" href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener noreferrer">PDF</a>
     </div>
   </li>
 
