--- a/other.html
+++ b/other.html
@@ -7,9 +7,7 @@ extra_css:
   - /assets/spacing.css
 ---
 
-<section class="hero">
-  <h1 style="margin:0;">Other</h1>
-</section>
+<h1 style="margin:0 0 16px;">Other</h1>
 
 <ol class="papers">
 
