--- a/other.html
+++ b/other.html
@@ -7,14 +7,15 @@ extra_css:
   - /assets/spacing.css
 ---
 
-<h1 style="margin:0 0 16px;">Other</h1>
-
 <ol class="papers">
 
   <li class="paperitem">
-    <div class="paper-title"><b>PhD Thesis</b></div>
-    <div class="paper-authors"><i>&ldquo;Harmonic functions on branching graphs&rdquo;</i></div>
-    <div class="paper-venue">University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.</div>
+    <div class="paper-title">
+      <b>PhD Thesis</b>: <i>&ldquo;Harmonic functions on branching graphs&rdquo;</i>
+    </div>
+    <div class="paper-venue">
+      University of Reims Champagne-Ardenne, (2023), supervised by G. Olshanski.
+    </div>
 
     <div class="paper-links">
       <a class="pill" href="{{ '/assets/other_writings/phd-thesis.pdf' | relative_url }}" target="_blank" rel="noopener noreferrer">PDF</a>
@@ -22,9 +23,12 @@ extra_css:
   </li>
 
   <li class="paperitem">
-    <div class="paper-title"><b>Master&rsquo;s Thesis</b></div>
-    <div class="paper-authors"><i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i></div>
-    <div class="paper-venue">Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.</div>
+    <div class="paper-title">
+      <b>Master&rsquo;s Thesis</b>: <i>&ldquo;Infinite-dimensional Representations of the Quantized Algebra U(gl_N)&rdquo;</i>
+    </div>
+    <div class="paper-venue">
+      Higher School of Economics &amp; Skoltech, (2019), supervised by G. Olshanski.
+    </div>
 
     <div class="paper-links">
       <a class="pill" href="{{ '/assets/other_writings/masters-thesis.pdf' | relative_url }}" target="_blank" rel="noopener noreferrer">PDF</a>
