--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Nikita Safonkin
 show_footer: true
 extra_css:
   - /assets/index.css
-  - /assets/spacing.css
+  - /assets/mobile_last_updated.css
 ---
 
 <section class="home-layout">
@@ -66,7 +66,7 @@ extra_css:
 </section>
 
 <div class="card" style="margin-top:16px;">
-  <h2 style="margin:0 0 15px;">Recent Talks</h2>
+  <h2 style="margin:0 0 10px;">Recent Talks</h2>
 
   <ul style="margin:0; padding-left:18px;">
     <li style="margin:0 0 10px;">
